fix spacing

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
   color: var(--Neutral-0);
   font-size: 6rem;
   line-height: 110%;
-  letter-spacing: -0.01rem;
+  letter-spacing: -0.1rem;
   font-weight: var(--Extrabold);
   text-align: center;
   margin-bottom: 2rem;
